@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -52,17 +52,32 @@ public class NoSuchProviderException extends MessagingException {
     private static final long serialVersionUID = 8058319293154708827L;
     
     /**
-     * Constructor.
+     * Constructs a NoSuchProviderException with no detail message.
      */
     public NoSuchProviderException() {
 	super();
     }
 
     /**
-     * Constructor.
+     * Constructs a NoSuchProviderException with the specified
+     * detail message.
+     *
      * @param message	The detailed error message
      */
     public NoSuchProviderException(String message) {
 	super(message);
+    }
+
+    /**
+     * Constructs a NoSuchProviderException with the specified
+     * detail message and embedded exception.  The exception is chained
+     * to this exception.
+     *
+     * @param message	The detailed error message
+     * @param e		The embedded exception
+     * @since		JavaMail 1.5
+     */
+    public NoSuchProviderException(String message, Exception e) {
+	super(message, e);
     }
 }
