@@ -21,6 +21,7 @@ The following bugs have been fixed in the 1.5 release.
 K 5682	add FetchProfile.Item.SIZE
 K 5683	fix protected fields in final classes in javax.mail.search
 K 5684	add MimeMultipart(String subtype, BodyPart... bps) constructor
+K 5685	exceptions should support exception chaining
 K 5686	ParameterList needs to support use by IMAP
 K 5687	ContentType.toString & ContentDisposition.toString shouldn't return null
 K 5689	add Transport.send(msg, username, password) method
